# ChrysalisRS

./: Cargo.toml  Extensions.md  README.md
examples/: extension_example.rs  log_adapter.rs  tracing_integration.rs
src/: adapter.rs  core.rs  error.rs  extensions.rs  formatter.rs  lib.rs  util.rs
