[package]
name = "chrysalis_rs"
version = "0.1.0"
edition = "2021"
description = "Transform logs into beautiful, structured JSON for web UIs"
license = "MIT OR Apache-2.0"
repository = "https://github.com/chrysalis-rs/chrysalis_rs"
readme = "README.md"
keywords = ["logging", "serialization", "json", "web-ui"]
categories = ["development-tools", "web-programming"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2.0.12"
uuid = { version = "1.3", features = ["v4", "serde"] }
rand = { version = "0.9.0" }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
log = { version = "0.4", features = ["std"] }
tracing = "0.1"
anyhow = "1.0"